--- a/manifest.json
+++ b/manifest.json
@@ -2,7 +2,7 @@
     "name" : "KK02",
     "appid" : "__UNI__5DD911E",
     "description" : "",
-    "versionName" : "1.0.0",
+    "versionName" : "2.0.0",
     "versionCode" : "100",
     "transformPx" : false,
     /* 5+App特有相关 */
@@ -57,9 +57,9 @@
     "quickapp" : {},
     /* 小程序特有相关 */
     "mp-weixin" : {
-		"miniprogramRoot":"",
-        "cloudfunctionRoot": "cloudfunctions/", // 配置云开发目录
-        "appid": "wx418e91a689e0b4c2",
+        "miniprogramRoot" : "",
+        "cloudfunctionRoot" : "cloudfunctions/", // 配置云开发目录
+        "appid" : "wx418e91a689e0b4c2",
         "setting" : {
             "urlCheck" : false
         },
@@ -67,7 +67,8 @@
     },
     "mp-alipay" : {
         "usingComponents" : true,
-        "component" : true
+        "component" : true,
+        "appid" : "2021001129648682"
     },
     "mp-baidu" : {
         "usingComponents" : true
