--- a/cloudfunctions-aliyun/subscribeMessage/config.json
+++ b/cloudfunctions-aliyun/subscribeMessage/config.json
@@ -1,1 +1,14 @@
-{}
+{
+  "permissions": {
+    "openapi": [
+      "subscribeMessage.send"
+    ]
+  },
+  "triggers": [
+    {
+      "name": "myTimer",
+      "type": "timer",
+      "config": "0 */5 * * * ?"
+    }
+  ]
+}
